fx(variableName): Change variable name from camelCase to snake_case
- Refactor Authentication middlewares
- Change variable name
- write tests for endpoint
- Test endpoint using postman

[Delivers]
