# swagger.json
@@ -126,7 +126,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "old_password": {
+                "password": {
                   "type": "string",
                   "example": "Blesdfnnjkjk9"
                 },
@@ -463,7 +463,7 @@
         "first_name",
         "last_name",
         "address",
-        "phoneNumber"
+        "phone_number"
       ],
       "properties": {
         "first_name": {
@@ -486,7 +486,7 @@
           "type": "string",
           "example": "NO. 9 Omoru"
         },
-        "phoneNumber": {
+        "phone_number": {
           "type": "string",
           "example": "08167672019"
         }
@@ -525,7 +525,7 @@
         },
         "status": {
           "type": "integer",
-          "example": "Available"
+          "example": "available"
         },
         "type": {
           "type": "string",
@@ -573,7 +573,7 @@
         },
         "status": {
           "type": "integer",
-          "example": "Available"
+          "example": "available"
         },
         "type": {
           "type": "string",
